--- a/DEV.D1/signup.css
+++ b/DEV.D1/signup.css
@@ -11,43 +11,49 @@
 .backbutton button{
     padding: 5px;
     background:transparent; 
-    height: 35px;
-    width: 105px;
-    margin-top: 2%;
-    margin-left: 2%;
+    height: 50px;
+    width: 120px;
+    /* margin-top: 2%;
+    margin-left: 2%; */
     border:none;
     outline: 1.5px solid #07111a;
     border-radius: 50px;
     cursor: pointer;
-    font-size: 1em;
+    font-size: 20px;
     font-weight:550;
     display: grid;
-    grid-template-columns: 1fr 1.5fr;
+    grid-template-columns: 1.5fr 3fr;
     align-items: center;
     justify-items: center;
     transition: 1s;
 }
 .backbutton ion-icon{
-    font-size: 25px;
+    font-size: 30px;
 }
-body{
-    height:100%;
-    width: 100%;
-    background: url('pinkbg.jpeg') no-repeat;
-    background-size: cover;
-    background-position: center;
-} 
+.backbutton{
+    position: absolute;
+    top: 30px;
+    left: 50px;
+    
+}
+
+
 section {
     display: flex;
     justify-content: center;
     align-items: center;
+    height:100vh;
+    width: 100%;
+    background: url('pinkbg.jpeg') no-repeat;
+    background-size: cover;
+    background-position: center;
     /* min-height: 100vh;
     background: url('pinkbg.jpeg') no-repeat;
     background-size: cover;
     background-position: center; */
 }
 .registerbox{
-    margin-top: -1.8%;
+    /* margin-top: -1.8%; */
     position: relative;
     width: 400px;
     height: 660px;
